Fix form__actions bottom spacing

--- a/app/assets/stylesheets/beyond_canvas/components/_forms.scss
+++ b/app/assets/stylesheets/beyond_canvas/components/_forms.scss
@@ -7,7 +7,7 @@
   &__actions {
     width: 100%;
 
-    &:not(:last-child) {
+    &:not(:last-of-type) {
       margin-bottom: 30px;
     }
   }
